--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
     --cor-fundo: #9ea098;
     --cor-principal: #0B0D20 ;
     --cor-secundaria: #212333;
-    --cor-destaque: #636363;
+    --cor-destaque: #0051ff;
     --cor-texto: #ffffff;
 }
 
