--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
     --cor-principal: #0B0D20 ;
     --cor-secundaria: #212333;
     --cor-destaque: #0051ff;
-    --cor-texto: #0026ff;
+    --cor-texto: #d9ff00;
 }
 
 body{
