--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 :root{
-    --cor-fundo: #9ea098;
+    --cor-fundo: #000000;
     --cor-principal: #0B0D20 ;
     --cor-secundaria: #212333;
-    --cor-destaque: #0051ff;
+    --cor-destaque: #7d9207;
     --cor-texto: #d9ff00;
 }
 
